app/assets/stylesheets/partials/admin/_access_tree.scss
@mixin transition($duration) {
  -webkit-transition: $duration;
  -moz-transition: $duration;
  -ms-transition: $duration;
  -o-transition: $duration;
  transition: $duration;
}

#facility-access-power-user {
  background: #d0e3f9;
  padding: 0.375rem 0.75rem;
  border-radius: 4px;
  font-weight: normal;

  &.hidden {
    display: none;
  }
}

#facility-access {
  .spinner {
    margin: 10em 0 0 15em;
  }

  &.hidden {
    display: none;
  }

  .card {
    &.access-tree {
      padding: 0px;
      min-height: 460px;
    }
  }

  #select-all-facilities {
    height: 100%;
    display: flex;
    padding: 5px 0 5px 0;

    .form-check {
      margin: 10px;

      label {
        font-weight: 100;
      }
    }
  }

  ul {
    list-style-type: none;
    display: block;
    height: 100%;
    padding-left: 0px;
    margin: 0px;

    li {
      height: 100%;
      padding: 0px;
      border-top: 1px solid var(--light);
      position: relative;
      margin-bottom: -1px;
    }

    .access-item {
      height: 100%;
      display: flex;

      &.organization {
        div {
          label {
            font-weight: 600;
          }
        }
      }

      &.collapsed {
        span {
          i {
            transform: rotate(180deg);
            @include transition(0.3s);
            padding-bottom: 2px;
          }
        }

        & + .access-item-wrapper {
          display: none;
        }
      }

      div {
        label {
          user-select: none;
        }
      }

      &:not(.collapsed):not(.facility) {
        background: #fff8e0;
      }

      &.organization {
        div {
          label {
            font-weight: 600;
          }
        }
      }

      &:not(.collapsed):not(.facility) {
        background: #fff8e0;
      }

      &:not(.facility) {
        &:hover {
          background: var(--light);
          @include transition(0.1s);
        }

        .access-item__padding {
          flex: auto;
          cursor: pointer;
        }
      }

      .spacer {
        padding-left: 20px;
      }

      .form-check {
        margin: 10px;

        label {
          font-weight: 100;
        }
      }

      .form-check__show {
        margin: 12px 16px 12px 16px;
        padding: 0px;
      }

      .access-ratio {
        padding: 12px;
        margin-left: auto;
        font-size: 15px;
        color: var(--secondary);
        font-weight: normal;
        font-style: normal;
        cursor: pointer;
        margin-right: -6px;
        user-select: none;

        i {
          transform: rotate(0deg);
          margin: 0px 8px 2px 8px;
          @include transition(0.2s);
          pointer-events: none;
        }
      }
    }
  }

  .access-tree {
    &.show {
      .form-check-label {
        font-weight: normal;
      }
    }
  }
}

